Replaced large picture, fixed some spacing

--- a/round3/css/aic.css
+++ b/round3/css/aic.css
@@ -20,59 +20,45 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    color: #000019;
 }
 .jumbotron.first {
     background-image: url('../img/fieldgirl.jpg');
     background-position: top;
 }
 .jumbotron.second {
-    margin-top: 100px;
     background-image: url('../img/desk.jpg');
 }
-.jumbotron .btn {
-    margin-top:30px;
+.jumbotron .btn:first-child {
+    margin-top:300px;
+}
+.jumbotron .btn:last-child {
+	margin-top: 10px;
     margin-bottom:50px;
 }
 .jumbotron h2 {
     margin-top: 50px;
 }
-.jumbotron .blurb {
-  margin-top: 25px;
-  margin-bottom: 40px;
+.jumbotron.first .blurb {
+	margin-top: 25px;
+	margin-bottom: 40px;
 }
-
-.col-md-adjust {
-    padding-right: 0;
-    padding-left: 0;
-}
-.img-adjust {
-	max-width: 100%;
-	max-height: 484px;
+.jumbotron.second .blurb {
+	margin-top: 20px;
+	margin-bottom: 30px;
 }
 .navbar .navbar-header .navbar-brand img {
     max-height:43px;
     margin-top: -14px;
 }
-.eye-exam {
-    line-height: 75%;
-    letter-spacing: 10px;
-    color: transparent;
-    text-shadow: 0 0 5px rgba(0,0,0,0.5);
-    transition: all 0.2s ease-in-out 0.2s;
-	-webkit-transition: all 0.2s ease-in-out 0.2s;
+section {
+    margin-top:100px;
 }
-.eye-exam:hover {
-    color: #000;
-    text-shadow: none;
-}
-.white-area {
-    padding-top:100px;
-}
-.white-area h2 {
+section h2 {
     margin-top: 40px;
 }
-.testing * {
-    border: 2px solid black;
+section img {
+    margin-bottom: 40px;
 }
 footer.landing-footer {
     background-color: #333333;
@@ -123,11 +109,6 @@ Reds - secondary
 	border-bottom: 5px solid #e13030;
 	padding-bottom:10px;
 	background-color: #e8ebef;
-}
-/* Social button styling */
-.navbar-red .navbar-right > li:not(.active) > a:hover, .navbar-red .navbar-left > li:not(.active) > a:focus {
-	/*border-bottom: 5px solid #e8ebef;
-	padding-bottom:10px;*/
 }
 .navbar-right i {
     color: #FFFFFF;
@@ -189,6 +170,11 @@ Reds - secondary
 		color: #ffffff;
 		background-color: #e13030;
 	}
+}
+
+section p {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .btn-aic-primary {
